--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,5 @@
       
     </div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
